--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,8 @@
 #pacman-container {
-    border: 8px solid yellow;
-    height: 620px;
-    width: 560px;
-    margin: 0 auto;
-    background: rgba(0,0,0,1);
+
+    margin: 55px 0 50px 400px;
 }
 
 body {
-
+  background-color: black;
 }
