--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,75 @@
+
+@font-face {
+  font-family: "Main Font";
+  src: url('PressStart2P.ttf');
+}
+main {
+  width: 80%;
+  height: 80%;
+  position: relative;
+}
+
 canvas {
 
-    margin: 60px 0 50px 410px;
+    margin: 30px 0 50px 410px;
+}
+
+body {
+  background-color: black;
+}
+
+#menu {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-left: 410px;
+}
+
+#menu, #lose-menu {
+  color: yellow;
+  font-size: 20px;
+  font-family: "Main Font";
+  display: none;
+}
+
+#menu span, #lose-menu span {
+  text-align: left;
+  font-family: "Main Font";
+  font-size: 14px;
+}
+
+#instructions {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 600px;
+
 }
 
 
 
-body {
-  background-color: black;
+button {
+  font: inherit;
+  margin: inherit;
+  border: inherit;
+  background: inherit;
+  color: inherit;
+}
+
+#start-button, #replay-button {
+  border: 2px solid yellow;
+  border-radius: 20px;
+  z-index: 21;
+  padding: 10px 0;
+  margin-top: 50px;
+}
+
+#start-button:hover, #replay-button:hover {
+  color: red;
+  z-index: 21;
+  transition: .2s ease-in-out;
+  transform: scale(1.1);
+  border: 2px solid red;
+  cursor: pointer;
 }
