--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,16 @@
   font-family: "Main Font";
   src: url('PressStart2P.ttf');
 }
-main {
+
+#main {
   width: 80%;
   height: 80%;
   position: relative;
+
+  margin: 0 auto;
 }
-
 canvas {
-
-    margin: 30px 0 50px 410px;
+  margin: 0 auto;
 }
 
 body {
@@ -20,10 +21,8 @@ body {
 
 #menu {
   background-color: transparent;
-  width: 100%;
-  height: 100%;
   position: absolute;
-  margin-left: 410px;
+
 }
 
 #menu, #lose-menu {
@@ -66,10 +65,10 @@ button {
 }
 
 #start-button:hover, #replay-button:hover {
-  color: red;
+  color: green;
   z-index: 21;
   transition: .2s ease-in-out;
   transform: scale(1.1);
-  border: 2px solid red;
+  border: 2px solid green;
   cursor: pointer;
 }
