--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ body {
 
 }
 
+#lose-menu h1 {
+  padding-top: 150px;
+  padding-left: 100px;
+}
+
 #menu, #lose-menu {
   color: yellow;
   font-size: 20px;
